<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/BMI"
        android:textSize="25dp"
        android:gravity="center"
        android:background="#F9FA7C"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Name"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Height"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/edtHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="55dp"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Weight"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/edtWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
    <Button
        android:id="@+id/btnBMI"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/Tx_btn1"
        android:textSize="20dp"
        android:elevation="15dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbBMI"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_BMI"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/edtBMI"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="104dp"
            android:enabled="false"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lbResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tx_Result"
            android:textSize="30dp"
            />

        <EditText
            android:id="@+id/edtResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:enabled="false"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
    </LinearLayout>
</LinearLayout>